# CARL

./: .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  format.cfg
demo/: CMakeLists.txt  demo.cpp  mmio.c
include/: CARL.h  CARL.hpp
src/: CARL_graph.cpp  CARL_graph_utils.cpp  CMakeLists.txt  heavy_edge_matching.cpp
